# sumikac2018

./: .ghci  .gitignore  LICENSE  README.md  stack.yaml  sumikac2018.cabal
data/mustache/: about.html.mustache  about_layout.html.mustache  cart.html.mustache  cart_layout.html.mustache  cart_order_details.html.mustache  cart_order_summary.html.mustache  category_layout.html.mustache  category_list_items.html.mustache  category_page_carousel.html.mustache  category_page_product_rows.html.mustache  common_footer.html.mustache  currency_changer.html.mustache  default_script_tags.html.mustache  head.html.mustache  mobile_header_dropdown.html.mustache  non_mobile_header_bar.html.mustache  privacy.html.mustache  privacy_layout.html.mustache  product_layout.html.mustache  product_page_accordion.html.mustache  product_page_images.html.mustache  product_page_price_table.html.mustache  social_links_list_items.html.mustache  terms.html.mustache  terms_layout.html.mustache
exe/: Main.hs
src/Client/: Currencies.hs  Drive.hs  OpenExchangeRates.hs
src/Data/Sumikac/: Conduit.hs  Types.hs
src/Network/HTTP/: EmsSiteScrape.hs  OpenExchangeRates.hs
src/Network/HTTP/Gogol/: Drive.hs  Picasa.hs
src/Path/: Default.hs
src/Sumikac/: Conduit.hs  Types.hs
src/Sumikac/Types/: Description.hs  EmsDeliveryCosts.hs  ExchangeRates.hs  NamedDimensions.hs  Picasa.hs  Product.hs  Weight.hs  YenAmount.hs
src/Sumikac/Types/Rendered/: CategoryPage.hs  Common.hs  ProductPage.hs
