name:                sumikac2018
version:             0.1.0.0

synopsis:            SumikaCrafts site generator

description:         Generates the sumikacrafts site from documents stored in Google                      Drive

homepage:            https://github.com/adetokunbo/sumikac2018#readme
license:             AllRightsReserved
author:              Tim Emiola
maintainer:          adetokunbo@users.noreply.github.com
copyright:           BSD3
category:            Experiments
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.md

executable create-sumikac-site
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson         >= 1.2.3
                     , base          >= 4.7 && < 5
                     , sumikac2018
                     , bytestring    >= 0.10.8.2 && < 0.11

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-patterns
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

  exposed-modules:     Network.HTTP.EmsSiteScrape
                     , Network.HTTP.Gogol.Drive
                     , Network.HTTP.Gogol.Picasa
                     , Network.HTTP.OpenExchangeRates
                     , Path.Default
                     , Sumikac.Conduit
                     , Sumikac.Types
                     , Sumikac.Types.EmsDeliveryCosts
                     , Sumikac.Types.ExchangeRates
                     , Sumikac.Types.Description
                     , Sumikac.Types.NamedDimensions
                     , Sumikac.Types.Picasa
                     , Sumikac.Types.Weight
                     , Sumikac.Types.YenAmount

  build-depends:       aeson         >= 1.2.3
                     , attoparsec    >= 0.13 && < 0.14
                     , base          >= 4.7 && < 5
                     , bytestring    >= 0.10.8.2 && < 0.11
                     , conduit       >= 1.2.13 && < 1.3
                     , conduit-combinators >= 1.1.2
                     , conduit-extra >= 1.2.3.2
                     , containers    >= 0.5
                     , directory     >= 1.3 && < 1.4
                     , exceptions    >= 0.8
                     , filepath      >= 1.4 && < 1.5
                     , formatting    >= 6.2 && < 6.3
                     , gogol         >= 0.3 && < 1.0
                     , gogol-core    >= 0.3 && < 1.0
                     , gogol-drive   >= 0.3 && < 1.0
                     , http-client   >= 0.5
                     , http-conduit  >= 2.2
                     , http-types    >= 0.9
                     , lens          >= 4.15.4
                     , lens-aeson    >= 1.0
                     , network-uri   >= 2.6
                     , mtl           >= 2.2.1
                     , path          >= 0.6.1
                     , pretty-simple >= 2.0
                     , resourcet     >= 1.1.11
                     , scientific    >= 0.3
                     , taggy         >= 0.2.1
                     , taggy-lens    >= 0.1.2
                     , text          >= 1.2.2
                     , unordered-containers >= 0.2
                     , yaml          >= 0.8.28
                     , wreq          >= 0.5
