name:                sumikac2018
version:             0.1.0.0

synopsis:            SumikaCrafts site generator

description:         Generates the sumikacrafts site from documents stored in Google                      Drive

homepage:            https://github.com/adetokunbo/sumikac2018#readme
license:             AllRightsReserved
author:              Tim Emiola
maintainer:          adetokunbo@users.noreply.github.com
copyright:           BSD3
category:            Experiments
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:  README.md

executable create-sumikac-site
  hs-source-dirs:      exe
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-patterns
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson         >= 1.2.3
                     , base          >= 4.9 && < 5
                     , bytestring    >= 0.10.8.2 && < 0.11
                     , filepath      >= 1.4 && < 1.5
                     , exceptions    >= 0.8
                     , mtl           >= 2.2.1
                     , resourcet     >= 1.1
                     , sumikac2018
                     , text          >= 1.2.2

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-patterns
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints

  exposed-modules:     Network.HTTP.EmsSiteScrape
                     , Network.HTTP.Gogol.Drive
                     , Network.HTTP.Gogol.Picasa
                     , Network.HTTP.OpenExchangeRates
                     , Path.Default
                     , Sumikac.Conduit
                     , Sumikac.Types
                     , Sumikac.Types.Description
                     , Sumikac.Types.EmsDeliveryCosts
                     , Sumikac.Types.ExchangeRates
                     , Sumikac.Types.NamedDimensions
                     , Sumikac.Types.Picasa
                     , Sumikac.Types.Product
                     , Sumikac.Types.Weight
                     , Sumikac.Types.YenAmount
                     , Sumikac.Types.Rendered.CategoryPage
                     , Sumikac.Types.Rendered.Common
                     , Sumikac.Types.Rendered.ProductPage

  build-depends:       aeson         >= 1.2.3
                     , aeson-casing  >= 0.1 && < 1.0
                     , aeson-pretty  >= 0.8 && < 1.0
                     , attoparsec    >= 0.13 && < 0.14
                     , base          >= 4.9 && < 5
                     , bytestring    >= 0.10.8.2 && < 0.11
                     , conduit       >= 1.2.13 && < 1.3
                     , conduit-combinators >= 1.1.2
                     , conduit-extra >= 1.2.3.2
                     , containers    >= 0.5
                     , directory     >= 1.3 && < 1.4
                     , exceptions    >= 0.8
                     , filepath      >= 1.4 && < 1.5
                     , formatting    >= 6.2 && < 6.3
                     , gogol         >= 0.3 && < 1.0
                     , gogol-core    >= 0.3 && < 1.0
                     , gogol-drive   >= 0.3 && < 1.0
                     , http-client   >= 0.5
                     , http-conduit  >= 2.2
                     , http-types    >= 0.9
                     , microlens-platform >= 0.3.9 && < 1.0
                     , lens          >= 4.15.4
                     , lens-aeson    >= 1.0
                     , mtl           >= 2.2.1
                     , network-uri   >= 2.6
                     , path          >= 0.6.1
                     , pretty-simple >= 2.0
                     , resourcet     >= 1.1.11
                     , scientific    >= 0.3
                     , taggy         >= 0.2.1
                     , taggy-lens    >= 0.1.2
                     , text          >= 1.2.2
                     , unordered-containers >= 0.2
                     , yaml          >= 0.8.28
                     , wreq          >= 0.5
